# Versionary-DS2-Project

./: .gitignore  BUILDING.md  CLI.cpp  CLI.h  CMakeLists.txt  GUI.cpp  GUI.h  Global.cpp  Global.h  ImageComparer.cpp  ImageComparer.h  ImageProcessor.cpp  ImageProcessor.h  MerkleTree.cpp  MerkleTree.h  Quadtree.cpp  Quadtree.h  README.md  USER_GUIDE.md  Utils.cpp  Utils.h  UtilsTest.cpp  build.bat  main.cpp
DS2/: CLI.cpp  CLI.h  CMakeLists.txt  GUI.cpp  GUI.h  ImageComparer.cpp  ImageComparer.h  ImageProcessor.cpp  ImageProcessor.h  MerkleTree.cpp  Quadtree.cpp  Quadtree.h  Utils.cpp  Utils.h  main.cpp  test.cpp
include/: CLI.h  GUI.h  ImageProcessor.h  MerkleTree.h  Quadtree.h  Security.h  VersionControl.h
src/: CLI.cpp  GUI.cpp  ImageProcessor.cpp  MerkleTree.cpp  Quadtree.cpp  Security.cpp  VersionControl.cpp  main.cpp
src/cli/: VersionaryCLI.cpp  VersionaryCLI.h
src/core/: MerkleTree.cpp  MerkleTree.h  QuadTree.cpp  QuadTree.h  Version.h  VersionManager.cpp  VersionManager.h
src/gui/: MainWindow.cpp  MainWindow.h  TerminalWidget.cpp  TerminalWidget.h
tests/: CMakeLists.txt  test_merkle_tree.cpp  test_quadtree.cpp
